--- a/.travis.yml
+++ b/.travis.yml
@@ -71,17 +71,10 @@ matrix:
       <<: *windows-steps
       python: 3.7
 script:
-  - pip --version || true
-  - python --version || true
-  - python2 --version || true
-  - python3 --version || true
-  - python2.7 --version || true
-  - python3.5 --version || true
-  - python3.6 --version || true
-  - python3.7 --version || true
-  - python2.7 -m pip --version || true
-  - python3.5 -m pip --version || true
-  - python3.6 -m pip --version || true
-  - python3.7 -m pip --version || true
-  - py --version || true
+  - python --version || pip --version || true
+  - python2.7 --version || python2.7 -m pip --version || true
+  - python3.5 --version || python3.5 -m pip --version || true
+  - python3.6 --version || python3.6 -m pip --version || true
+  - python3.7 --version || python3.7 -m pip --version || true
+  - py --version || py -m pip --version || true
   - pip --version || true
