--- a/.travis.yml
+++ b/.travis.yml
@@ -71,10 +71,10 @@ matrix:
       <<: *windows-steps
       python: 3.7
 script:
-  - python --version || pip --version || true
-  - python2.7 --version || python2.7 -m pip --version || true
-  - python3.5 --version || python3.5 -m pip --version || true
-  - python3.6 --version || python3.6 -m pip --version || true
-  - python3.7 --version || python3.7 -m pip --version || true
-  - py --version || py -m pip --version || true
-  - pip --version || true
+  - python --version ; pip --version || true
+  - python2.7 --version ; python2.7 -m pip --version || true
+  - python3.5 --version ; python3.5 -m pip --version || true
+  - python3.6 --version ; python3.6 -m pip --version || true
+  - python3.7 --version ; python3.7 -m pip --version || true
+  - py --version ; py -m pip --version || true
+  - pip --version ; true
