--- a/.travis.yml
+++ b/.travis.yml
@@ -24,20 +24,22 @@ matrix:
       before_install:
         - pyenv --version
         - pyenv install --list
-        - pyenv install 2.7 || true
-        - pyenv install 3.5 || true
-        - pyenv install 3.6 || true
-        - pyenv install 3.7 || true
+        - pyenv install 2.7.14 || true
+        - pyenv install 3.5.4 || true
+        - pyenv install 3.6.3 || true
+        - pyenv install 3.7-dev || true
     # Xenial Linux cpp
     - name: "Xenial Linux cpp"
       language: cpp
       before_install:
         - pyenv --version
+        - pyenv -h
+        - pyenv install -h
         - pyenv install --list
-        - pyenv install 2.7 || true
-        - pyenv install 3.5 || true
-        - pyenv install 3.6 || true
-        - pyenv install 3.7 || true
+        - pyenv install 2.7.14 || true
+        - pyenv install 3.5.4 || true
+        - pyenv install 3.6.3 || true
+        - pyenv install 3.7-dev || true
     # Trusty Linux
     - name: "Python 2.7 on Trusty Linux"
       <<: *trusty-steps
