--- a/.travis.yml
+++ b/.travis.yml
@@ -28,25 +28,119 @@ matrix:
     - name: "Python 3.7-dev on Trusty Linux cpp"
     - name: "Python 3.7-dev on Xenial Linux cpp"
   include:
+    # Trusty Linux =====================
+    - name: "Python 2.7 on Trusty Linux"
+      <<: *trusty-steps
+      python: 2.7
+    - name: "Python 3.5 on Trusty Linux"
+      <<: *trusty-steps
+      python: 3.5
+    - name: "Python 3.6 on Trusty Linux"
+      <<: *trusty-steps
+      python: 3.6
+    - name: "Python 3.7 on Trusty Linux"
+      <<: *trusty-steps
+      python: 3.7
+    # Xenial Linux =====================
+    - name: "Python 2.7 on Xenial Linux"
+      <<: *xenial-steps
+      python: 2.7
+    - name: "Python 3.5 on Xenial Linux"
+      <<: *xenial-steps
+      python: 3.5
+    - name: "Python 3.6 on Xenial Linux"
+      <<: *xenial-steps
+      python: 3.6
+    - name: "Python 3.7 on Xenial Linux"
+      <<: *xenial-steps
+      python: 3.7
+    # Trusty Linux cpp =====================
+    - name: "Python 2.7 on Trusty Linux cpp"
+      <<: *trusty-cpp-steps
+      before_install:
+        - pyenv install --force 2.7.14
+        - pyenv global 2.7.14
+    - name: "Python 3.5 on Trusty Linux cpp"
+      <<: *trusty-cpp-steps
+      before_install:
+        - pyenv install --force 3.5.4
+        - pyenv global 3.5.4
+    - name: "Python 3.6 on Trusty Linux cpp"
+      <<: *trusty-cpp-steps
+      before_install:
+        - pyenv install --force 3.6.3
+        - pyenv global 3.6.3
+    - name: "Python 3.7-dev on Trusty Linux cpp"
+      <<: *trusty-cpp-steps
+      before_install:
+        - pyenv install --force 3.7-dev
+        - pyenv global 3.7-dev
+    # Xenial Linux cpp =====================
+    - name: "Python 2.7 on Xenial Linux cpp"
+      <<: *xenial-cpp-steps
+      before_install:
+        - pyenv install --force 2.7.14
+        - pyenv global 2.7.14
+    - name: "Python 3.5 on Xenial Linux cpp"
+      <<: *xenial-cpp-steps
+      before_install:
+        - pyenv install --force 3.5.4
+        - pyenv global 3.5.4
+    - name: "Python 3.6 on Xenial Linux cpp"
+      <<: *xenial-cpp-steps
+      before_install:
+        - pyenv install --force 3.6.3
+        - pyenv global 3.6.3
     - name: "Python 3.7-dev on Xenial Linux cpp"
       <<: *xenial-cpp-steps
       before_install:
-        - pyenv --version || true
-        - pyenv update || true
-        - pyenv upgrade || true
+        - pyenv install --force 3.7-dev
+        - pyenv global 3.7-dev
     # macOS =====================
     - name: "Python 2.7 on macOS"
       <<: *osx-steps
+      python: 2.7
+    - name: "Python 3.5 on macOS"
+      <<: *osx-steps
+      python: 3.5
+      before_install:
+        - pyenv install --list
+        - brew upgrade pyenv
+        - pyenv install 3.5.6
+    - name: "Python 3.6 on macOS"
+      <<: *osx-steps
+      python: 3.6
+    - name: "Python 3.7 on macOS"
+      <<: *osx-steps
       python: 3.7
       before_install:
-        - pyenv --version || true
-        - pyenv update || true
-        - pyenv upgrade || true
+       - brew upgrade python
+    # Windows =====================
+    - name: "Python 2.7 on Windows"
+      <<: *windows-steps
+      python: 2.7
+      before_install: choco install python2
+      env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
+    - name: "Python 3.5 on Windows"
+      <<: *windows-steps
+      python: 3.5
+      before_install: choco install python --version 3.5.4
+      env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
+    - name: "Python 3.6 on Windows"
+      <<: *windows-steps
+      python: 3.6
+      before_install: choco install python --version 3.6.8
+      env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
+    - name: "Python 3.7 on Windows"
+      <<: *windows-steps
+      python: 3.7
+      before_install: choco install python
+      env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
 install: python -m pip install --upgrade pip
 script:
   - python --version ; pip --version
-  - pyenv --version ; pyenv --list || true
+  - pyenv --version ; pyenv install --list || true
   #- which -a python || true
   #- which -a python2 || true
   #- which -a python3 || true
