--- a/.travis.yml
+++ b/.travis.yml
@@ -76,35 +76,43 @@ matrix:
     # Trusty Linux cpp =====================
     - name: "Python 2.7 on Trusty Linux cpp"
       <<: *trusty-cpp-steps
+      install:
         - pyenv install --force 2.7.14
         - pyenv global 2.7.14
     - name: "Python 3.5 on Trusty Linux cpp"
       <<: *trusty-cpp-steps
+      install:
         - pyenv install --force 3.5.4
         - pyenv global 3.5.4
     - name: "Python 3.6 on Trusty Linux cpp"
       <<: *trusty-cpp-steps
+      install:
         - pyenv install --force 3.6.3
         - pyenv global 3.6.3
     - name: "Python 3.7-dev on Trusty Linux cpp"
       <<: *trusty-cpp-steps
+      install:
         - pyenv install --force 3.7-dev
         - pyenv global 3.7-dev
     # Xenial Linux cpp =====================
     - name: "Python 2.7 on Xenial Linux cpp"
       <<: *xenial-cpp-steps
+      install:
         - pyenv install --force 2.7.14
         - pyenv global 2.7.14
     - name: "Python 3.5 on Xenial Linux cpp"
       <<: *xenial-cpp-steps
+      install:
         - pyenv install --force 3.5.4
         - pyenv global 3.5.4
     - name: "Python 3.6 on Xenial Linux cpp"
       <<: *xenial-cpp-steps
+      install:
         - pyenv install --force 3.6.3
         - pyenv global 3.6.3
     - name: "Python 3.7-dev on Xenial Linux cpp"
       <<: *xenial-cpp-steps
+      install:
         - pyenv install --force 3.7-dev
         - pyenv global 3.7-dev
     # macOS =====================
@@ -115,6 +123,7 @@ matrix:
       <<: *osx-steps
       python: 3.5
       <<: *osx-steps
+      install:
         - pyenv install 3.5.6
     - name: "Python 3.6 on macOS"
       python: 3.6
@@ -122,30 +131,35 @@ matrix:
     - name: "Python 3.7 on macOS"
       python: 3.7
       <<: *osx-steps
+      install:
         - brew upgrade python
     # Windows =====================
     - name: "Python 2.7 on Windows"
       python: 2.7
       <<: *windows-steps
+      install:
         - choco install python2
       env: PATH=/c/Python27:/c/Python27/Scripts:$PATH
     - name: "Python 3.5 on Windows"
       python: 3.5
       <<: *windows-steps
+      install:
         - choco install python --version 3.5.4
       env: PATH=/c/Python35:/c/Python35/Scripts:$PATH
     - name: "Python 3.6 on Windows"
       python: 3.6
       <<: *windows-steps
+      install:
         - choco install python --version 3.6.8
       env: PATH=/c/Python36:/c/Python36/Scripts:$PATH
     - name: "Python 3.7 on Windows"
       python: 3.7
       <<: *windows-steps
+      install:
         - choco install python
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
-install: python -m pip install --upgrade pip
+before_script: python -m pip install --upgrade pip
 script:
   - python --version ; pip --version
   - pyenv --version ; pyenv install --list || true
